--- a/pricing.html
+++ b/pricing.html
@@ -1158,7 +1158,7 @@
 
 <!-- Pricing Sections -->
 
-<div class="flex justify-center">
+<div id="pricing-plans" class="flex justify-center scroll-mt-20">
   <div class="grid grid-cols-1 lg:grid-cols-3 gap-8 max-w-5xl">
     <!-- Consultation Plan -->
     <div class="relative hover:bg-white/[0.04] transition-all duration-300 group rounded-2xl pt-6 pr-6 pb-6 pl-6"
