--- a/consultation/consultation-modal.html
+++ b/consultation/consultation-modal.html
@@ -1,5 +1,5 @@
 <!-- Consultation Modal -->
-<div id="consultation-modal" class="fixed inset-0 bg-black/70 backdrop-blur-md hidden z-[100] flex items-center justify-center p-4 opacity-0 transition-opacity duration-150">
+<div class="fixed inset-0 bg-black/70 backdrop-blur-md hidden z-[100] flex items-center justify-center p-4 opacity-0 transition-opacity duration-150">
   <div class="bg-[#0a0a12] rounded-2xl max-w-4xl w-full max-h-[85vh] overflow-y-auto relative shadow-2xl border border-white/10 transform transition-all duration-150 ease-out scale-95">
     <button id="close-consultation-modal" class="absolute top-4 right-4 text-zinc-400 hover:text-white z-[110]">
       <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
