--- a/featured.html
+++ b/featured.html
@@ -1544,6 +1544,44 @@
         iframe.src = '';
         document.body.style.overflow = 'auto';
       }
+
+      function openModal(type) {
+        const modal = document.getElementById(type + '-modal');
+        modal.classList.remove('hidden');
+        document.body.style.overflow = 'hidden';
+      }
+
+      function closeModal(type) {
+        const modal = document.getElementById(type + '-modal');
+        modal.classList.add('hidden');
+        document.body.style.overflow = 'auto';
+      }
+
+      // Close modal when clicking outside
+      document.addEventListener('click', function(event) {
+        if (event.target.classList.contains('fixed')) {
+          const modals = document.querySelectorAll('[id$="-modal"]');
+          modals.forEach(modal => {
+            if (!modal.classList.contains('hidden')) {
+              modal.classList.add('hidden');
+              document.body.style.overflow = 'auto';
+            }
+          });
+        }
+      });
+
+      // Close modal with Escape key
+      document.addEventListener('keydown', function(event) {
+        if (event.key === 'Escape') {
+          const modals = document.querySelectorAll('[id$="-modal"]');
+          modals.forEach(modal => {
+            if (!modal.classList.contains('hidden')) {
+              modal.classList.add('hidden');
+              document.body.style.overflow = 'auto';
+            }
+          });
+        }
+      });
     </script>
 
     <!-- Consultation Modal will be loaded here -->
@@ -1653,5 +1691,12 @@
         </div>
       </div>
     </div>
+
+  <!-- Performance optimizers -->
+  <script src="components/scroll-performance.js" defer></script>
+  <script src="components/style-optimizer.js" defer></script>
+  <script src="components/animation-observer.js" defer></script>
+  <script src="components/custom-cursor.js" defer></script>
+
 
 </body></html>
