--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <a href="featured.html" class="px-4 py-2 text-sm font-medium text-zinc-300 hover:text-white transition">Featured</a>
             <a href="solutions.html" class="px-4 py-2 text-sm font-medium text-zinc-300 hover:text-white transition">Solutions</a>
             <a href="pricing.html" class="px-4 py-2 text-sm font-medium text-zinc-300 hover:text-white transition">Pricing</a>
-           
+            <a href="mailto:info@softsmark.com" class="px-4 py-2 text-sm font-medium text-zinc-300 hover:text-white transition">Contact</a>
           </nav>
 
           <!-- Right: Desktop Button + Mobile Buttons -->
@@ -387,6 +387,7 @@
               <a href="featured.html" class="block text-xl font-medium text-white hover:text-violet-400 transition-colors py-2">Featured</a>
               <a href="solutions.html" class="block text-xl font-medium text-white hover:text-violet-400 transition-colors py-2">Solutions</a>
               <a href="pricing.html" class="block text-xl font-medium text-white hover:text-violet-400 transition-colors py-2">Pricing</a>
+              <a href="mailto:info@softsmark.com" class="block text-xl font-medium text-white hover:text-violet-400 transition-colors py-2">Contact</a>
             </div>
 
             <!-- Mobile CTA Button -->
@@ -551,11 +552,11 @@
                     </svg>
                     <span class="text-sm">+1 (234) 567-8900</span>
                   </a>
-                  <a href="mailto:contact@softsmark.com" class="flex items-center gap-3 text-zinc-400 hover:text-white transition-colors">
+                  <a href="mailto:info@softsmark.com" class="flex items-center gap-3 text-zinc-400 hover:text-white transition-colors">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 4.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
                     </svg>
-                    <span class="text-sm">contact@softsmark.com</span>
+                    <span class="text-sm">info@softsmark.com</span>
                   </a>
                 </div>
               </div>
