--- a/consultation/freetrail.html
+++ b/consultation/freetrail.html
@@ -72,9 +72,8 @@
           <a href="../index.html" class="flex items-center gap-3">
             <span class="inline-flex h-9 w-9 items-center justify-center rounded-xl bg-gradient-to-br from-blue-500 to-indigo-600">
               <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 text-white" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                <path d="M12 6v12"></path>
-                <path d="M17.196 9 6.804 15"></path>
-                <path d="m6.804 9 10.392 6"></path>
+                <polyline points="16 18 22 12 16 6"></polyline>
+                <polyline points="8 6 2 12 8 18"></polyline>
               </svg>
             </span>
             <span class="text-lg font-semibold text-white tracking-tight">SOFTSMARK</span>
